--- a/packages/core/fields/textarea/style.scss
+++ b/packages/core/fields/textarea/style.scss
@@ -4,6 +4,6 @@
 
 .cf-textarea__input {
 	display: block;
-	width: 100%;
+	width: 100% !important;
 	resize: vertical;
 }
